# pomodoro

./: CMakeLists.txt  PomodoroWidget.cpp  PomodoroWidget.h  README.md  pomodoro.json
